feat(backend): implement complete authentication system with JWT
Backend Authentication Features:
- Add SecurityConfig with JWT authentication filter and CORS configuration
- Implement AuthController with register, login, getCurrentUser endpoints
- Add UserRole enum (USER, ADMIN, MODERATOR) for RBAC
- Add UpdateProfileRequest DTO for user profile updates
- Implement register method in UserService with duplicate validation
- Update application configs with JWT secret and security settings
- Remove username update from updateUserProfile (username is immutable)
- Add password encoder dependency injection in UserService

Security Features:
- JWT token-based authentication
- Password hashing with BCrypt
- CORS enabled for frontend integration
- Public endpoints: /auth/**, /ws/**
- Protected endpoints require valid JWT token